--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@playwright/test": "^1.50.1",
     "@types/node": "^22.13.0"
   }
